--- a/Portfolio_optimization_example.ipynb
+++ b/Portfolio_optimization_example.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampler = EmbeddingComposite(DWaveSampler()) #create a new sampler\n",
+    "sampler = EmbeddingComposite(DWaveSampler(solver={'qpu': True})) #create a new sampler\n",
     "response = sampler.sample(bqm, num_reads=100) #run our model with the sampler 100 times"
    ]
   },
